# transaction-transformer

./: .gitignore  .pylintrc  0  1  10  2  3  4  5  6  7  8  9  Makefile  README.md  convert.py  db_connection.py  investing_dot_com_text_exporter.py  kiwoom_text_importer.py  main.py  malformed_date_error.py  mariadb_exporter.py  pyproject.toml  requirements.txt  simple_portfolio.py  simple_transaction.py  simple_transaction_db_impl.py  simple_transaction_text_printer_impl.py  text_printer_impl_base.py  yahoo_finance_web_exporter.py
config/: conversion_rule.yaml  expense_category_config.yaml  global_config.yaml
data/: kiwoom.yaml
doc/: design-note.md  glossaries.md  install.md
docs/: TODO.md  design-note.md  ideas.md  install.md
tests/: test_expense_transaction.py  test_simple_portfolio.py  test_simple_transaction.py  test_symbol_config.py  test_yahoo_finance_web_exporter.py
tools/: 0000-sandbox.sql  cleanup_kiwoom_data.py  concat.sh  create-database-finance.sql  expense_transactions_monthly_analysis.sql  extract_rules.py  mask.py  mask.sh  run-insert-monthly-sums.sh  run-insert-monthly-sums.sql  show-all.sh  show-euc-kr-doc.py  show_euc_kr_doc.py  test-mask-unmask.sh  unmask.sh
tt/: __init__.py  bank_salad_expense_transaction.py  bank_salad_expense_transaction_importer.py  bootstrap.py  db_connection.py  db_impl_base.py  expense_category.py  expense_transaction.py  fact_data_control.py  investing_dot_com_text_exporter.py  kiwoom_text_importer.py  log_control.py  main.py  malformed_date_error.py  simple_portfolio.py  simple_portfolio_control.py  stock_split.py  (+4 more)
(+33 files in other folders)
