[project]
name = "transaction-transformer"
version = "1.0.0"
description = "Transaction Transformer is a collection of converting tools with regards to financial transactions and portfolio holdings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "click>=8.3.0",
    "loguru>=0.7.3",
    "mariadb>=1.1.14",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "sqlalchemy>=2.0.44",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
]
